--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "scripts": {
     "docs:prepare": "gitbook install",
-    "docs:watch": "npm run docs:prepare && rm -rf _book && gitbook serve",
-    "docs:build": "npm run docs:prepare && rm -rf _book && gitbook build",
-    "docs:publish": "",
-    "dev": "npm run docs:watch"
+    "dev": "npm run docs:prepare && rm -rf _book && gitbook serve",
+    "dist": "npm run docs:prepare && rm -rf _book && gitbook build"
   },
   "repository": {
     "type": "git",
